<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>languages-json</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <appendAssemblyId>false</appendAssemblyId>
              <archive>
                <manifest>
                  <mainClass>
                    Languages
                  </mainClass>
                </manifest>
              </archive>
              <attach>false</attach>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
            </configuration>
            <goals>
              <goal>single</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>jackson-databind</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-api</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>5.7.1</version>
    </dependency>
    <dependency>
      <artifactId>assertj-core</artifactId>
      <groupId>org.assertj</groupId>
      <scope>test</scope>
      <version>3.9.1</version>
    </dependency>
    <dependency>
      <artifactId>slf4j-api</artifactId>
      <groupId>org.slf4j</groupId>
      <version>2.0.0-alpha5</version>
    </dependency>
    <dependency>
      <artifactId>slf4j-simple</artifactId>
      <groupId>org.slf4j</groupId>
      <version>2.0.0-alpha5</version>
    </dependency>
    <dependency>
      <artifactId>thymeleaf</artifactId>
      <groupId>org.thymeleaf</groupId>
      <version>3.0.11.RELEASE</version>
    </dependency>
    <dependency>
      <artifactId>flying-saucer-pdf</artifactId>
      <groupId>org.xhtmlrenderer</groupId>
      <version>9.1.20</version>
    </dependency>
  </dependencies>
  <groupId>org.example</groupId>

  <modelVersion>4.0.0</modelVersion>

  <properties>
    <jackson.version>2.12.4</jackson.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <version>1.0-SNAPSHOT</version>

</project>